# rolldown

./: Cargo.toml  README.md
.github/workflows/: ci-correctness.yaml
crates/rolldown/benches/: threejs.rs
crates/rolldown/examples/: threejs10x.rs
crates/rolldown/src/: bundler.rs  lib.rs
crates/rolldown/src/input_options/builtins/: mod.rs
crates/rolldown/tests/esbuild/default/: bundler_default_test.go  commonjs.go  minify.go
crates/rolldown_ast_template/: Cargo.toml
crates/rolldown_common/: Cargo.toml
crates/rolldown_compiler/: Cargo.toml
crates/rolldown_core/: Cargo.toml
crates/rolldown_core/src/: code_splitter.rs  graph.rs
crates/rolldown_core/src/module_loader/: module_task.rs
crates/rolldown_core/src/plugin_driver/: build_plugin_driver.rs
crates/rolldown_error/: Cargo.toml
crates/rolldown_error/src/: error.rs  utils.rs
crates/rolldown_error/src/error_kind/: mod.rs
crates/rolldown_node_binding/: index.d.ts
crates/rolldown_node_binding/src/: js_build_plugin.rs
crates/rolldown_plugin/: Cargo.toml
crates/rolldown_plugin/src/: args.rs  lib.rs  output.rs  plugin.rs
crates/rolldown_plugin_node_resolve/src/: lib.rs
crates/rolldown_resolver/: Cargo.toml
crates/rolldown_resolver/src/: lib.rs
crates/rolldown_runtime_helpers/: Cargo.toml
crates/rolldown_swc_utils/: Cargo.toml
crates/rolldown_swc_visitors/: Cargo.toml
crates/rolldown_swc_visitors/src/: clean_ast.rs  lib.rs
crates/rolldown_test_utils/src/: tester.rs
crates/rolldown_tracing/: Cargo.toml
crates/rolldown_tracing/src/: lib.rs
(+16 files in other folders)
